--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\Repositories\Repositories.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
+    </ItemGroup>
+
 </Project>
